--- a/gdscript.lang
+++ b/gdscript.lang
@@ -19,7 +19,7 @@
  Boston, MA 02111-1307, USA.
 -->
 
-<language id="gdscript" _name="GDScript" version="3.0" _section="Scripts">
+<language id="gdscript" _name="GDScript" version="2.0" _section="Scripts">
   <metadata>
     <property name="mimetypes">text/x-gdscript</property>
     <property name="globs">*.gd</property>
@@ -27,22 +27,22 @@
   </metadata>
 
   <styles>
-    <style id="module-handler"    _name="Module Handler"        map-to="def:preprocessor"/>
-    <style id="keyword"           _name="Keyword"               map-to="def:keyword"/>
-    <style id="multiline-string"  _name="Multiline string"      map-to="def:string"/>
-    <style id="string"            _name="String"                map-to="def:string"/>
-    <style id="escaped-char"      _name="Escaped Character"     map-to="def:special-char"/>
-    <style id="format"            _name="Format"                map-to="def:character"/>
-    <style id="string-conversion" _name="string-conversion"/>
-    <style id="special-variable"  _name="Special Variable"      map-to="def:identifier"/>
-    <style id="boolean"           _name="Boolean"               map-to="def:boolean"/>
-    <style id="floating-point"    _name="Floating point number" map-to="def:floating-point"/>
-    <style id="decimal"           _name="Decimal number"        map-to="def:decimal"/>
-    <style id="base-n-integer"    _name="Base-N number"         map-to="def:base-n-integer"/>
-    <style id="complex"           _name="Complex number"        map-to="def:complex"/>
-    <style id="builtin-constant"  _name="Builtin Constant"      map-to="def:special-constant"/>
-    <style id="builtin-object"    _name="Builtin Object"        map-to="def:type"/>
-    <style id="builtin-function"  _name="Builtin Function"      map-to="def:builtin"/>
+    <style id="module-handler"    name="Module Handler"        map-to="def:preprocessor"/>
+    <style id="keyword"           name="Keyword"               map-to="def:keyword"/>
+    <style id="multiline-string"  name="Multiline string"      map-to="def:string"/>
+    <style id="string"            name="String"                map-to="def:string"/>
+    <style id="escaped-char"      name="Escaped Character"     map-to="def:special-char"/>
+    <style id="format"            name="Format"                map-to="def:character"/>
+    <style id="string-conversion" name="string-conversion"/>
+    <style id="special-variable"  name="Special Variable"      map-to="def:identifier"/>
+    <style id="boolean"           name="Boolean"               map-to="def:boolean"/>
+    <style id="floating-point"    name="Floating point number" map-to="def:floating-point"/>
+    <style id="decimal"           name="Decimal number"        map-to="def:decimal"/>
+    <style id="base-n-integer"    name="Base-N number"         map-to="def:base-n-integer"/>
+    <style id="complex"           name="Complex number"        map-to="def:complex"/>
+    <style id="builtin-constant"  name="Builtin Constant"      map-to="def:special-constant"/>
+    <style id="builtin-object"    name="Builtin Object"        map-to="def:type"/>
+    <style id="builtin-function"  name="Builtin Function"      map-to="def:builtin"/>
   </styles>
 
   <definitions>
@@ -64,11 +64,11 @@
     <!-- http://docs.python.org/ref/strings.html -->
     <context id="escaped-char" style-ref="escaped-char" extend-parent="true">
       <match extended="true">
-		\\(                   # leading backslash
-		[\\\"\'nrbtfav\?] |   # escaped character
-		[0-7]{1,3} |          # one, two, or three octal digits
-		x[0-9A-Fa-f]+         # 'x' followed by hex digits
-		)
+        \\(                   # leading backslash
+        [\\\"\'nrbtfav\?] |   # escaped character
+        [0-7]{1,3} |          # one, two, or three octal digits
+        x[0-9A-Fa-f]+         # 'x' followed by hex digits
+        )
       </match>
     </context>
 
@@ -97,7 +97,7 @@
         <context ref="def:shebang"/>
         <context ref="def:shell-like-comment"/>
         
-		<context ref="double-quoted-string"/>
+        <context ref="double-quoted-string"/>
         <context ref="single-quoted-string"/>
 
         <context id="special-variables" style-ref="special-variable">
